Fix Navbar Alignment (#12)
* fix favicon color, add to footer, fix loader colors

* fix typo

* fix navbar

--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -83,7 +83,7 @@
 
     div:nth-of-type(2) {
       width: calc(100% - 350px);
-      text-align: right;
+      text-align: center;
 
       ul {
         list-style-type: none;
